<package>
  <name>nasa_camera_interface</name>
  <version>0.0.1</version>
  <description>This package is an interface between the camera on the NASA robot and ROS.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/nasa_camera_interface</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="sksellio@uwaterloo.ca">Sarah Elliott</maintainer>
  <author email="sksellio@uwaterloo.ca">Sarah Elliott</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msg</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>std_msg"</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


</package>


